--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
 <head>
 <title>Page Title</title>
+<style>
+    table, td, th {
+        border:1px solid;
+    }
+</style>
 </head>
 <body>
-<table>
+    <h4 style="color:chocolate">Hisab Kitab</h4>
+<table style="text-align: left;" >
     <tr>
         <th>
             Name
@@ -11,20 +17,18 @@
         <th>
             Amount
         </th>
-        <th>
-            Date
-        </th>
     </tr>
     <tr>
         <td>Allah Deta</td>
-        <td>300 RS</td>
-        <td>7/17/2022</td>
-        <td>Haji Bashir</td>
-        <td>300 RS</td>
-        <td>7/18/2022</td>
-        <td>Sughran Mai</td>
-        <td>250 RS</td>
-        <td>7/19/2022</td>
+        <td>1300 RS</td>
+    </tr>
+    <tr>
+        <td>Masi Sharrem</td>
+        <td>1000 RS</td>
+    </tr>
+    <tr>
+        <td>Sughra Mai</td>
+        <td>1500 RS</td>
     </tr>
 </table>
 </body>
